# safa

./: .gitignore  LICENSE  README.md  core.py  index.py  main.py  pyproject.toml  requirements.txt  start.py  start_aigc.py  start_on_aistudio.py  test.py  webapp.py
.github/workflows/: test.yml
db/: temple.json  模板.json
far/: __init__.py  _analysis_s2d1.py  _analysis_s2d5.py  _config.py  _formula.py  _gpt.py  _para.py  _response.py  _text.py  core.py  main.py  para.py  text.py
input/: temple.xlsx  模板.xlsx
output/: .~模板.docx  temple.docx  样本1.docx  模板.docx
safa/: __init__.py  _analysis_s2d2.py  _analysis_s2d3.py  _config.py  _formula.py  _para.py  _text.py  main.py
templates/: index.html  text.html  样品.docx
test/: test.py
tests/: test_smoke.py
